# hashed-permutation

./: Cargo.toml  LICENSE.txt  azure-pipelines.yml
.github/workflows/: CI.yml
benches/: kensler.rs
docs/: README.md
examples/: basic.rs
src/: error.rs  hashed_permutation.rs  iterator.rs  kensler.rs  lib.rs
