[package]
name = "hashed-permutation"
description = "A fast, instant-access way to permute a range of numbers"
repository = "https://github.com/afnanenayet/hashed-permutation.git"
keywords = ["hashed", "permutation", "permute", "fast", "instant"]
version = "3.0.2"
authors = ["Afnan Enayet <afnan@afnan.io>"]
edition = "2018"
license = "MIT"
readme = "docs/README.md"

[badges]
azure-devops = { project = "afnanenayet/hashed-permutation", pipeline = "afnanenayet.hashed-permutation" }
maintenance = { status = "actively-developed" }

[dependencies]
rand = { version = "0.8", optional = true }
thiserror = "1.0"

[features]
default = []
use-rand = ["rand"]
